[gd_scene load_steps=4 format=2]

[ext_resource path="res://Snake.gd" type="Script" id=1]
[ext_resource path="res://head.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

[node name="Snake" type="Node2D"]
script = ExtResource( 1 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 0.3
autostart = true

[node name="Head" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Head"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource( 1 )
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="area_entered" from="Head" to="." method="_on_Head_area_entered"]
